# peashot

./: CONTRIBUTING.md  Cargo.toml  README.OLD.md  README.md  rust-toolchain.toml
.github/workflows/: build.yml  gh-pages.yml  release.yml
docgen/: Cargo.toml
docgen/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md
docs/theme/: extra.css  highlight.css  index.hbs
docs/theme/css/: variables.css
docs/theme/fonts/: fonts.css
peashot/: Cargo.toml  build.rs
peashot-config/: Cargo.toml
peashot-config/src/: color.rs  commands.rs  config.kdl  kdl.rs  key_mods.rs  key_named.rs  key_seq.rs  lib.rs  main2.rs  toggle.rs
peashot-macros/: Cargo.toml
peashot-macros/src/: lib.rs
peashot/src/: clipboard.rs  geometry.rs  icons.rs  last_region.rs  lazy_rect.rs  lib.rs  logging.rs  main.rs  message.rs
peashot/src/config/: cli.rs  commands.rs  key_map.rs  mod.rs  named_key.rs  options.rs  theme.rs
peashot/src/config/tests/: 2025_05_17_ferrishot_v0.3.kdl  mod.rs
peashot/src/image/: action.rs  mod.rs  rgba_handle.rs  screenshot.rs  upload.rs
peashot/src/ui/: app.rs  background_image.rs  debug_overlay.rs  errors.rs  grid.rs  mod.rs  selection.rs  selection_icons.rs  size_indicator.rs  welcome_message.rs
peashot/src/ui/popup/: image_uploaded.rs  keybindings_cheatsheet.rs  letters.rs  mod.rs
peashot/tests/: lib.rs
