[package]
name = "docgen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
peashot.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
clap-markdown.workspace = true
carapace_spec_clap.workspace = true
clap_complete_fig.workspace = true
clap_mangen.workspace = true
