[package]
name = "peashot-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
csscolorparser.workspace = true
eyre.workspace = true
miette.workspace = true
iced.workspace = true
cfg-if.workspace = true
kdl.workspace = true
annotate-snippets.workspace = true
strum.workspace = true