[package]
name = "peashot-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
quip.workspace = true
quote.workspace = true
syn.workspace = true
