[package]
name = "peashot"
description = "A powerful screenshot app"
keywords = ["screenshot", "screen-capture", "capture", "flameshot"]
categories = ["visualization", "multimedia"]
authors = ["Nik Revenco"]

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
debug = []

[package.metadata.wix]
upgrade-guid = "338F87CB-7559-4755-9DC7-889308AFCC72"
path-guid = "B2F84121-9832-457D-AD64-A5598BCD4AA7"
license = false
eula = false

[build-dependencies]
image.workspace = true

[dependencies]
mouse_position.workspace = true
xcap.workspace = true
iced.workspace = true
arboard.workspace = true
image.workspace = true
clap.workspace = true
rfd.workspace = true
etcetera.workspace = true
tempfile.workspace = true
tokio.workspace = true
miette.workspace = true
env_logger.workspace = true
log.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
pretty_assertions.workspace = true
thiserror.workspace = true
delegate.workspace = true
easy-ext.workspace = true
derive_more.workspace = true
strum.workspace = true
human_bytes.workspace = true
bon.workspace = true
tap.workspace = true
indoc.workspace = true
anstyle.workspace = true
paste.workspace = true